--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Hockey Nation OVR Calculator",
   "description": "Calculates player's min and max potential",
   "version": "1.0.0",
-  "permissions": ["webNavigation", "tabs", "activeTab", "scripting"],
+  "permissions": ["webNavigation", "tabs", "scripting"],
   "content_scripts": [
     {
       "matches": ["https://hockey-nation.com/*"],
