--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,12 @@
       "js": ["dist/contentScript.js"]
     }
   ],
-  "background": {
-    "service_worker": "dist/background.js"
-  },
+  "web_accessible_resources": [
+    {
+      "resources": ["dist/interceptor.js"],
+      "matches": ["*://hockey-nation.com/*"]
+    }
+  ],
   "host_permissions": ["https://hockey-nation.com/*"],
   "icons": {
     "16": "images/icon16.png",
